--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3272,6 +3272,8 @@ footer {
 }
 
 .popup-help-list-of-contacts-whatsapp-opacity .align {
+  margin-top: 50px;
+  padding-bottom: 50px;
   top: 50%;
   left: 50%;
   position: absolute;
@@ -3336,6 +3338,14 @@ footer {
   margin: 0px 15px;
 }
 
+.popup-elements-en-attente-opacity .align .card p {
+  margin-bottom: 20px;
+}
+
+.popup-elements-en-attente-opacity .align .card .overflow {
+  overflow-x: auto;
+}
+
 .popup-ecrire-description-opacity {
   background-color: #00000050;
   width: 100%;
@@ -3362,6 +3372,10 @@ footer {
   padding: 20px;
   margin: 0px 15px;
   border-radius: 5px;
+}
+
+.popup-ecrire-description-opacity .align .card input[type="file"] {
+  cursor: pointer;
 }
 
 .popup-ecrire-description-opacity .align .card p {
@@ -3405,11 +3419,184 @@ footer {
   background: #ff6f79;
 }
 
+.popup-ajouter-photo-couverture-opacity {
+  background-color: #00000050;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  overflow-y: auto;
+}
+
+.popup-ajouter-photo-couverture-opacity .align {
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card {
+  width: 250px;
+  background-color: #fff;
+  padding: 20px;
+  margin: 0px 15px;
+  border-radius: 5px;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card input[type="file"] {
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card p {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card textarea {
+  border: 1px solid #444;
+  font-size: 16px;
+  resize: vertical;
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card .title p {
+  color: red;
+  font-size: 19px;
+  margin-bottom: 10px;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card button {
+  background: red;
+  color: white;
+  padding: 5px 12px;
+  border: none;
+  border-radius: 3px;
+  font-size: 14px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.popup-ajouter-photo-couverture-opacity .align .card button:hover {
+  background: #ff6f79;
+}
+
+.capture-decran-du-contact .display {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 7px;
+}
+
+.capture-decran-du-contact .display input[type="file"] {
+  width: 150px;
+  cursor: pointer;
+}
+
+.popup-infos-capture-decran-opacity {
+  background: transparent;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+.popup-infos-capture-decran-opacity .align {
+  padding-top: 150px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.popup-infos-capture-decran-opacity .align .card {
+  width: 200px;
+  background-color:  white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 20px;
+}
+
+.name-of-group-about-list-of-contacts .a p {
+  font-size: 19px;
+  color: #00cc00;
+}
+
+.name-of-group-about-list-of-contacts .box-shadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 20px 10px;
+  margin-bottom: 50px;
+}
+
+.name-of-group-about-list-of-contacts .box-shadow p {
+  font-size: 14px;
+  color: #a6a6a6;
+  padding-bottom: 10px;
+}
+
+
+.name-of-group-about-list-of-contacts .box-shadow a {
+  font-size: 14px;
+  color: #a6a6a6;
+}
+
+
+/* generation connected - change photo cover success.js */
+/* generation connected - change photo cover success.js */
+/* generation connected - change photo cover success.js */
+.change-photo-cover-success .column {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.change-photo-cover-success .align {
+  text-align: center;
+}
+
+.change-photo-cover-success .align p {
+  padding: 0px 25px;
+}
+
+.change-photo-cover-success .align button {
+  padding: 5px 7px;
+  background-color: transparent;
+  color: red;
+  border: 1px solid #ccc;
+  font-size: 15px;
+  border-radius: 3px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.change-photo-cover-success .align button:hover {
+  background-color: #ff6f79;
+  color: white;
+  border: none;
+}
+
 /* generation connected - about list of contacts.js */
 /* generation connected - about list of contacts.js */
 /* generation connected - about list of contacts.js */
 .about-list-of-contacts .cover img {
   width: 600px;
+  cursor: pointer;
   border-radius: 5px;
   margin-top: 50px;
 }
@@ -12967,6 +13154,10 @@ footer {
 /* 310px */
 @media screen and (max-width: 310px) {
   /* omisify */
+  .popup-ecrire-description-opacity .align .card {
+    width: 230px;
+  }
+
   .popup-help-list-of-contacts-whatsapp-opacity .align .card {
     width: 230px;
   }
@@ -13039,15 +13230,15 @@ footer {
 @media screen and (max-width: 300px) {
   /* alrani */
   /* alrani */
-.infos-of-author {
-  width: 220px;
-  padding: 15px 15px;
-}
+  .infos-of-author {
+    width: 220px;
+    padding: 15px 15px;
+  }
 
-.infos-of-author .paragraph {
-  padding: 20px 5px;
-  font-size: 17px;
-}
+  .infos-of-author .paragraph {
+    padding: 20px 5px;
+    font-size: 17px;
+  }
 
   .about-author .paragraph {
     width: 230px;
@@ -13214,6 +13405,19 @@ footer {
 
   /* omisify */
   /* omisify */
+  .popup-infos-capture-decran-opacity .align {
+    padding-top: 140px;
+  }
+
+  .popup-infos-capture-decran-opacity .align .card {
+    width: 180px;
+    padding: 20px 15px;
+  }
+
+  .popup-ajouter-photo-couverture-opacity .align .card {
+    width: 230px;
+  }
+
   .popup-elements-en-attente-opacity .align .card {
     width: 200px;
   }
@@ -13343,6 +13547,10 @@ footer {
 /* 290px */
 @media screen and (max-width: 290px) {
 /* omisify */
+.popup-ecrire-description-opacity .align .card {
+    width: 210px;
+}
+
 .popup-help-list-of-contacts-whatsapp-opacity .align .card {
   width: 210px;
 }
@@ -13415,6 +13623,23 @@ footer {
   }
 
   /* omisify */
+  .popup-infos-capture-decran-opacity .align {
+    padding-top: 120px;
+  }
+
+  .popup-infos-capture-decran-opacity .align .card {
+    width: 160px;
+  }
+
+  .popup-ajouter-photo-couverture-opacity .align .card {
+    width: 210px;
+    padding: 20px 15px;
+  }
+
+  .popup-ajouter-photo-couverture-opacity .align .card input[type="file"] {
+    width: 150px;
+  }
+
   .add-a-whatsapp-contact-opacity .align .card {
     width: 210px;
   }
@@ -13668,6 +13893,10 @@ footer {
 /* 270px */
 @media screen and (max-width: 270px) {
   /* omisify */
+  .popup-ecrire-description-opacity .align .card {
+    width: 190px;
+  }
+
   .popup-help-list-of-contacts-whatsapp-opacity .align .card {
     width: 190px;
   }
@@ -13835,6 +14064,18 @@ footer {
   }
 
   /* omisify */
+  .popup-infos-capture-decran-opacity .align {
+    padding-top: 110px;
+  }
+
+  .popup-infos-capture-decran-opacity .align .card {
+    width: 140px;
+  }
+
+  .popup-ajouter-photo-couverture-opacity .align .card {
+    width: 190px;
+  }
+
   .popup-elements-en-attente-opacity .align .card {
     width: 190px;
     padding: 20px 15px;
@@ -14107,6 +14348,10 @@ footer {
 
   /* omisify */
   /* omisify */
+  .popup-ecrire-description-opacity .align .card {
+    width: 170px;
+  }
+
   .popup-help-list-of-contacts-whatsapp-opacity .align .card {
     width: 170px;
   }
@@ -14504,6 +14749,10 @@ footer {
   }
 
   /* omisify */
+  .popup-ajouter-photo-couverture-opacity .align .card {
+    width: 167px;
+  }
+
   .home-influencer-new-omisify-mobile .display-btn .button-a button{
     padding: 8px 8px;
   }
@@ -14555,6 +14804,15 @@ footer {
   } 
 
   /* omisify */
+  .popup-help-list-of-contacts-whatsapp-opacity .align {
+    margin-top: 100px;
+    padding-bottom: 50px;
+  }
+
+  .popup-ecrire-description-opacity .align .card {
+    width: 150px;
+  }
+
   .popup-help-list-of-contacts-whatsapp-opacity .align .card {
     width: 150px;
   }
@@ -14795,7 +15053,7 @@ footer {
     padding-top: 72px;
   }
 
-.one-book .images .image img {
+  .one-book .images .image img {
   width: 75px;
   height: 30px;
  }
@@ -14826,6 +15084,14 @@ footer {
 
 /* omisify */
 /* omisify */
+.popup-infos-capture-decran-opacity .align {
+  padding-top: 70px;
+}
+
+.popup-infos-capture-decran-opacity .align .card {
+  width: 130px;
+}
+
 .popup-elements-en-attente-opacity .align .card {
   width: 160px;
   padding: 20px 15px;
@@ -15061,6 +15327,10 @@ footer {
 }
 
 /* omisify */
+.popup-help-list-of-contacts-whatsapp-opacity .align .card {
+  width: 145px;
+} 
+
 .popup-genre-opacity .align .card {
   width: 155px;
 }
