--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3346,6 +3346,13 @@ footer {
   overflow-x: auto;
 }
 
+.popup-elements-en-attente-opacity .align .card .overflow #table th {
+  background-color: #666;
+  color: #fff;
+  font-weight: lighter;
+  padding: 5px 7px;
+}
+
 .popup-ecrire-description-opacity {
   background-color: #00000050;
   width: 100%;
@@ -3554,6 +3561,37 @@ footer {
   color: #a6a6a6;
 }
 
+
+/* generation connected - change photo cover error.js */
+/* generation connected - change photo cover error.js */
+/* generation connected - change photo cover error.js */
+.change-photo-cover-error .display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 70px;
+}
+
+.change-photo-cover-error .align {
+  text-align: center;
+}
+
+.change-photo-cover-error .align button {
+  padding: 5px 7px;
+  background-color: transparent;
+  color: red;
+  border: 1px solid #ccc;
+  font-size: 15px;
+  border-radius: 3px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.change-photo-cover-error .align button:hover {
+  background-color: #ff6f79;
+  color: white;
+  border: none;
+}
 
 /* generation connected - change photo cover success.js */
 /* generation connected - change photo cover success.js */
