--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3116,13 +3116,12 @@ footer {
 }
 
 .add-a-whatsapp-contact-opacity .align {
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
   margin-top: 45px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .add-a-whatsapp-contact-opacity .align .close {
@@ -3140,6 +3139,24 @@ footer {
   background-color: #fff;
   padding: 20px 10px;
   border-radius: 5px;
+}
+
+.add-a-whatsapp-contact-opacity .align .card .display-element {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-a-whatsapp-contact-opacity .align .card .display-element .a {
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.add-a-whatsapp-contact-opacity .align .card .display-element .a p {
+  padding-right: 3px;
 }
 
 .add-a-whatsapp-contact-opacity .align .card .center {
@@ -3300,6 +3317,47 @@ footer {
 }
 
 .popup-help-list-of-contacts-whatsapp-opacity .align .card .display-indice-three {
+  display: flex;
+  align-items: center;
+}
+
+.help-deuxieme-processus-activer-levier {
+  background: #00000050;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.help-deuxieme-processus-activer-levier .align {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.help-deuxieme-processus-activer-levier .align .card {
+  width: 250px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.help-deuxieme-processus-activer-levier .align .card .display {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.help-deuxieme-processus-activer-levier .align .card .display-indice-two {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.help-deuxieme-processus-activer-levier .align .card .display-indice-three {
   display: flex;
   align-items: center;
 }
@@ -3741,6 +3799,11 @@ footer {
   padding: 0px 15px;
 }
 
+.get-money-generation-connected-align input[type="checkbox"] {
+  padding-bottom: 10px;
+  color: red;
+}
+
 .get-money-generation-connected-align p {
   padding-bottom: 10px;
 }
@@ -4030,7 +4093,7 @@ footer {
 }
 
 .popup-before-list-of-contact-opacity .align .card {
-  width: 250px;
+  width: 300px;
   background-color: #fff;
   padding: 20px 10px;
   border-radius: 5px;
@@ -4480,13 +4543,10 @@ footer {
 }
 
 .popup-fonctionnement-opacity .align {
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
   margin-top: 50px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .popup-fonctionnement-opacity .align .card {
@@ -4495,8 +4555,9 @@ footer {
   padding: 20px;
 }
 
-.popup-fonctionnement-opacity .align .card .a p {
-  padding-bottom: 10px;
+.popup-fonctionnement-opacity .align .card .a {
+  display: flex;
+  align-items: center;
 }
 
 .popup-fonctionnement-opacity .align .card .center {
@@ -4515,36 +4576,6 @@ footer {
 
 .popup-fonctionnement-opacity .align .card .center button:hover {
   background-color: #ff6f79;
-}
-
-.popup-outil-opacity {
-  background-color: #00000050;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: fixed;
-  overflow-y: auto;
-}
-
-.popup-outil-opacity .align {
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  margin-top: 250px;
-  padding-bottom: 50px;
-}
-
-.popup-outil-opacity .align .card {
-  width: 250px;
-  background-color: white;
-  padding: 20px;
-}
-
-.popup-outil-opacity .align .card .a p {
-  padding-bottom: 10px;
 }
 
 .popupHelp-background {
@@ -4599,6 +4630,43 @@ footer {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: #fff;
 }
+
+
+.popup-help-gc-opacity {
+  background: #00000050;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.popup-help-gc-opacity .align {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.popup-help-gc-opacity .align .card {
+  width: 260px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.popup-help-gc-opacity .align .card .display {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.popup-help-gc-opacity .align .card .display-indice-two {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 
 /* Generation Connected - Facebook.js */
 /* Generation Connected - Facebook.js */
@@ -4678,11 +4746,10 @@ footer {
   border-radius: 5px;
 }
 
-.fb-popup-opacity .align .card .a p {
+.fb-popup-opacity .align .card .a {
   border: 1px solid white;
   padding: 15px;
   text-align: center;
-  font-size: 17px;
   margin-bottom: 7px;
 }
 
@@ -4696,9 +4763,218 @@ footer {
   margin-top: 5px;
 }
 
-.fb-popup-opacity .align .card .c p {
+.fb-popup-opacity .align .card .c a {
   font-size: 14px;
+  color: white;
 }
+
+.fb-popup-opacity .align .card .c svg {
+  margin-left: 1px;
+}
+
+.debut-processus-activer-levier-popup {
+  background-color: #00000050;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+.debut-processus-activer-levier-popup .align {
+  margin-top: 30px;
+  padding-bottom: 50px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+} 
+
+.debut-processus-activer-levier-popup .align .close {
+  display: flex;
+  justify-content: space-between;
+}
+
+.debut-processus-activer-levier-popup .align .card {
+  padding: 20px;
+  width: 191px;
+  background: #fff;
+  border-radius: 5px;
+}
+
+.debut-processus-activer-levier-popup .align .card .lien-video input[type="url"] {
+  padding: 3px 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  margin-top: 3px;
+  margin-bottom: 10px;
+}
+
+.debut-processus-activer-levier-popup .align .card .lien-video .a p {
+  color: red;
+  margin-top: 7px;
+}
+
+.debut-processus-activer-levier-popup .align .card .lien-video .b p {
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+.debut-processus-activer-levier-popup .align .card .lien-video button {
+  cursor: pointer;
+  padding: 5px 20px;
+  margin-top: 20px;
+  font-size: 15px;
+  background-color: transparent;
+  color: black;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.debut-processus-activer-levier-popup .align .card .lien-video button:hover {
+  background-color: #ff6f79;
+  border: none;
+  color: white;
+}
+
+
+.debut-processus-activer-levier-popup .align .card .display {
+  display: flex;
+}
+
+.debut-processus-activer-levier-popup .align .card .display .a {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.debut-processus-activer-levier-popup .align .card .display .a p {
+  padding-right: 2px;
+}
+
+.debut-processus-activer-levier-popup .align .card .choisir-groupe {
+  display: flex;
+  margin-top: 10px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .a {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .a p {
+  color: #00cc00;
+  font-size: 15px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .nom-du-groupe {
+  margin-top: 10px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .nom-du-groupe p {
+  font-size: 16px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .nom-du-groupe input[type="text"] {
+  font-size: 16px;
+  padding: 3px 5px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  background-color: transparent;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .capture-decran {
+  margin-top: 13px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .capture-decran input[type="file"] {
+  width: 150px;
+  margin-top: 7px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title button {
+  background: red;
+  color: white;
+  padding: 5px 12px;
+  margin-top: 20px;
+  cursor: pointer;
+  border: none;
+  font-size: 15px;
+}
+
+.debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title button:hover {
+  background: #ff6f79;
+}
+
+.debut-processus-activer-levier-popup .align .card button {
+  cursor: pointer;
+  padding: 5px 20px;
+  margin-top: 20px;
+  font-size: 15px;
+  background-color: transparent;
+  color: black;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.debut-processus-activer-levier-popup .align .card button:hover {
+  background-color: #ff6f79;
+  border: none;
+  color: white;
+}
+
+.display-debut-processus-activer-levier {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.display-debut-processus-activer-levier svg {
+  padding-right: 3px;
+}
+
+/*
+.input-lien-de-la-page input[type="url"] {
+  padding: 3px 5px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  background-color: transparent;
+  font-size: 16px;
+}
+
+.input-capture-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-capture-page input[type="file"] {
+  width: 150px;
+  margin-top: 7px;
+}
+
+.btn-ajouter-nouvelle-page-fb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.btn-ajouter-nouvelle-page-fb button {
+  background: red;
+  color: white;
+  padding: 5px 12px;
+  cursor: pointer;
+  border: none;
+  font-size: 15px;
+}
+
+.btn-ajouter-nouvelle-page-fb button:hover {
+  background: #ff6f79;
+}
+*/
 
 .popup-add-page-fb-opacity {
   background-color: #00000050;
@@ -4857,17 +5133,82 @@ footer {
 }
 
 .fb-popup-menu-to-right-opacity .align .card {
+  background-color: white;
+  width: 100px;
+  padding: 15px 10px;
   margin-left: 165px;
   margin-top: 70px;
-  width: 100px;
-  background-color: white;
-  padding: 15px 10px;
 }
 
 .fb-popup-menu-to-right-opacity .align .card .display {
   display: flex;
   align-items: center;
 }
+
+.fb-popup-menu-to-right-opacity .align .card .display p {
+  cursor: pointer;
+}
+
+.popup-page-en-attente-de-validation-opacity {
+  background: #00000050;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+.popup-page-en-attente-de-validation-opacity .align {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.popup-page-en-attente-de-validation-opacity .align .card {
+  width: 300px;
+  background-color: white;
+  padding: 25px 20px;
+  border-radius: 5px;
+}
+
+.popup-telecharger-logo-opacity {
+  background: #00000050;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+.popup-telecharger-logo-opacity .center {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.popup-telecharger-logo-opacity .center .card {
+  padding: 25px 20px;
+  width: 250px;
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+.popup-telecharger-logo-opacity .center .card .close {
+  display: flex;
+  justify-content: space-between;
+}
+
+.popup-telecharger-logo-opacity .center .card .images img {
+  width: 250px;
+  margin: 10px 0px;
+}
+
+
 
 /* home omisify - navbar bottom omisify.js */
 /* home omisify - navbar bottom omisify.js */
@@ -12715,6 +13056,10 @@ footer {
   }
 
   /* omisify */
+.popup-page-en-attente-de-validation-opacity .align .card {
+  width: 280px;
+}
+
   .about-list-of-contacts .cover img {
     width: 360px;
     margin-top: 30px;
@@ -12902,6 +13247,11 @@ footer {
   }
 
    /* omisify */
+   .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 280px;
+    padding: 25px 15px;
+  }
+
    .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 150px;
    }
@@ -13055,6 +13405,10 @@ footer {
   }
 
   /* omisify */
+  .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 270px;
+  }
+
   .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 125px;
    }
@@ -13230,6 +13584,18 @@ footer {
 /* 340px */
 @media screen and (max-width: 340px) {
    /* omisify */
+   .popup-help-gc-opacity .align .card {
+    padding: 20px 15px;
+  }
+
+   .popup-before-list-of-contact-opacity .align .card {
+    width: 280px;
+   }
+
+   .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 270px;
+  }
+
    .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 125px;
    }
@@ -13373,6 +13739,8 @@ footer {
 /* 330px */
 @media screen and (max-width: 330px) {
     /* omisify */
+   
+
     .popup-historic-opacity .align .card {
       width: 240px;
     }
@@ -13564,6 +13932,27 @@ footer {
   }
 
    /* omisify */
+   .popup-help-gc-opacity .align .card {
+    width: 240px;
+    padding: 20px 15px;
+  }
+  
+   .popup-before-list-of-contact-opacity .align .card {
+      width: 260px;
+   }
+
+  .popup-telecharger-logo-opacity .center .card {
+    padding: 25px 15px;
+  }
+
+   .popup-fonctionnement-opacity .align .card {
+    padding: 20px 15px;
+   }
+
+   .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 250px;
+  }
+
    .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 110px;
    }
@@ -13905,6 +14294,26 @@ footer {
 
   /* omisify */
   /* omisify */
+  .popup-help-gc-opacity .align .card {
+    width: 220px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card {
+    width: 230px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card .images img {
+    width: 230px;
+  }
+  
+  .popup-fonctionnement-opacity .align .card {
+    width: 230px;
+  }
+
+  .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 235px;
+  } 
+
   .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 95px;
    }
@@ -14135,6 +14544,26 @@ footer {
   }
 
   /* omisify */
+  .popup-help-gc-opacity .align .card {
+    width: 200px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card {
+    width: 210px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card .images img {
+    width: 210px;
+  }
+
+  .popup-fonctionnement-opacity .align .card {
+    width: 210px;
+  }
+
+  .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 215px;
+  } 
+
   .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 75px;
    }
@@ -14588,6 +15017,34 @@ footer {
   }
 
   /* omisify */
+  /* omisify */
+  
+.debut-processus-activer-levier-popup .align .card {
+  width: 191px;
+  padding: 20px 15px;
+}
+
+  .popup-help-gc-opacity .align .card {
+    width: 190px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card {
+    width: 190px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card .images img {
+    width: 190px;
+  }
+
+  .popup-fonctionnement-opacity .align .card {
+    width: 190px;
+  }
+
+  .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 200px;
+  } 
+
+
   .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 55px;
    }
@@ -14889,6 +15346,14 @@ footer {
 
   /* omisify */
   /* omisify */
+  .debut-processus-activer-levier-popup .align .card {
+    width: 181px;
+  }
+
+  .debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .nom-du-groupe input[type="text"] {
+    padding: 3px 1px;
+  }
+
   .popup-ecrire-description-opacity .align .card {
     width: 170px;
   }
@@ -15089,6 +15554,26 @@ footer {
 @media screen and (max-width: 240px) {
   /* omisify */
   /* omisify */
+  .popup-help-gc-opacity .align .card {
+    width: 170px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card {
+    width: 170px;
+  }
+
+  .popup-telecharger-logo-opacity .center .card .images img {
+    width: 170px;
+  }
+
+  .popup-fonctionnement-opacity .align .card {
+    width: 170px;
+  }
+
+  .popup-page-en-attente-de-validation-opacity .align .card {
+    width: 180px;
+  } 
+
   .fb-popup-menu-to-right-opacity .align .card {
     margin-left: 35px;
    }
@@ -15369,6 +15854,32 @@ footer {
   } 
 
   /* omisify */
+  .debut-processus-activer-levier-popup .align {
+    margin-top: 50px;
+  }
+
+  .debut-processus-activer-levier-popup .align .card {
+    width: 171px;
+  }
+
+  .debut-processus-activer-levier-popup .align .card {
+    padding: 20px 10px;
+  }
+
+  .debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .nom-du-groupe input[type="text"] {
+    font-size: 15px;
+  }
+
+  .debut-processus-activer-levier-popup .align .card .choisir-groupe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+   
+   .debut-processus-activer-levier-popup .align .card .ajouter-votre-groupe-title .a p {
+     text-align: center;
+   }
+  
   .popup-help-list-of-contacts-whatsapp-opacity .align {
     margin-top: 100px;
     padding-bottom: 50px;
@@ -15630,7 +16141,7 @@ footer {
 
   .profil-user-not-connected .display .block p {
     font-size: 17px;
-  } 
+  }
 
   .profil-app .icon {
     display: flex;
@@ -15649,6 +16160,30 @@ footer {
 
 /* omisify */
 /* omisify */
+.add-a-whatsapp-contact-opacity .align .card .display-element .a {
+  margin-right: 8px;
+}
+
+.popup-help-gc-opacity .align .card {
+  width: 155px;
+}
+
+.popup-telecharger-logo-opacity .center .card {
+  width: 155px;
+}
+
+.popup-telecharger-logo-opacity .center .card .images img {
+  width: 155px;
+}
+
+.popup-fonctionnement-opacity .align .card {
+  width: 155px;
+}
+
+.popup-page-en-attente-de-validation-opacity .align .card {
+  width: 165px;
+} 
+
 .fb-popup-menu-to-right-opacity .align .card {
   margin-left: 20px;
  }
@@ -15973,6 +16508,10 @@ footer {
 
 /* omisify */
 /* omisify */
+.debut-processus-activer-levier-popup .align .card {
+  padding: 20px 7px;
+}
+
 .popup-before-list-of-contact-opacity .align .card {
   width: 174px;
 }
