--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
   }
 
+/*
   ::-webkit-scrollbar {
     width: 12px
   }
@@ -17,7 +18,19 @@
 
   ::-webkit-scrollbar-thumb {
     background: #eee;
-  }
+  }*/
+  
+  ::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fff;
+}
 
   .menu-navigation .guide-color-blue-menu {
     color: blue;
